Page styles updated

--- a/templates/account/index.html
+++ b/templates/account/index.html
@@ -6,6 +6,7 @@
 {% import "admin/_helpers.html" as admin_helper %}
 
 {% block content %}
+{% include "_flash_messages_floating.html" %}
   <div class="splash" id="community-splash">
   <div class="splash-overlay vcenter hcenter">
     <div class="container text-center ie-vcenter padding-top">
@@ -20,50 +21,48 @@
     </div>
   </div>
 </div>
-<div class="container-padded">
-  <div class="container container-padded">
-    <a id="intro"></a>
-    <div class="row">
-      <div class="col-sm-10 col-sm-offset-1">
-        {% include "_flash_messages.html" %}
-          {% if enforce_privacy and (current_user.is_anonymous() or (current_user.is_authenticated and not current_user.admin)) %}
-            {{ privacy.render_lock_page() }}
-          {% else %}
-          <div class="row vcenter-sm hcenter">
-            <div class="col-md-8 col-xs-12 xs-center">
-              <h1>{{ _('Community') }} </h1><h4>{{total}} {{ _('registered users') }}</h4>
-              <small>Active volunteers are shown below</small>
-            </div>
-            <div class="col-md-4 col-xs-12 padding-top-xs text-center">
-              <a class="pull-right-sm btn btn-danger" href="{{url_for('leaderboard.index')}}">{{ _('View Leaderboard') }}</a>
-            </div>
+<a id="intro"></a>
+  {% if enforce_privacy and (current_user.is_anonymous() or (current_user.is_authenticated and not current_user.admin)) %}
+    {{ privacy.render_lock_page() }}
+  {% else %}
+    <section class="mid-grey pattern-brushed box-shadow-grey-bottom">
+      <p style="float:right;padding-right:10px;"><small>Photo: &copy; <a href="http://www.lensintheface.com" target="_href">Jon Ellis</a></small></p>
+      <div class="container container-padded>
+        <div class="row vcenter-sm hcenter">
+          <div class="col-md-8 col-xs-12 xs-center">
+            <h1>{{ _('Community') }} </h1><h4>{{total}} {{ _('registered users') }}</h4>
+            <small>Active volunteers are shown below</small>
           </div>
-          <hr>
-          {% if accounts %}
+          <div class="col-md-4 col-xs-12 padding-top-xs text-center">
+            <a class="pull-right-sm btn btn-danger" href="{{url_for('leaderboard.index')}}">{{ _('View Leaderboard') }}</a>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="white">
+      <div class="container container-padded">
+        {% if accounts %}
           <ul class="polaroids users">
-          {% for account in accounts %}
+            {% for account in accounts %}
               <li>
                 <a href="{{url_for('account.profile', name=account.name)}}" class="polaroid polaroid-sm" rel="popover" title="{{account.name}}" data-polaroid-title="{{account.name}}" data-html="true" data-content="
-             <strong>{{_('Joined')}}:</strong> {{account.created[0:10]}} 
-             <br/>
-             <strong>{{_('Answers')}}:</strong> {{account.task_runs}}
-             " rel="popover" data-original-title="<strong>{{account.name}}</strong>">
+                  <strong>{{_('Joined')}}:</strong> {{account.created[0:10]}} 
+                  <br/>
+                  <strong>{{_('Answers')}}:</strong> {{account.task_runs}}
+                  " rel="popover" data-original-title="<strong>{{account.name}}</strong>">
                   {{ helper.render_user_thumbnail(account, upload_method) }}
                 </a>
               </li>
-              {% endfor %}
+            {% endfor %}
           </ul>
-        {% endif %}
-        <div class="col-sm-9">
+          <div class="col-sm-9">
             {% if pagination.pages > 1 %}
-                {{ helper.render_pagination(pagination) }}
+              {{ helper.render_pagination(pagination) }}
             {% endif %}
-        </div>
+          </div>
         {% endif %}
       </div>
-    </div>
-  </div>
-</div>
+    </section>
 
 <script>
 $("a[rel=popover]").popover({
