--- a/templates/data/index.html
+++ b/templates/data/index.html
@@ -18,13 +18,13 @@
     </div>
   </div>
 </div>
-<div class="container container-padded remove-padding-bottom">
+
     <a id="intro"></a>
-    <section class="white">
+    <section class="mid-grey pattern-brushed box-shadow-grey-bottom">
         <div class="container container-padded">
             {% include "_flash_messages.html" %}
             <div class="col-md-11">
-                <h1>Open Data</h1>
+                <h1>Data</h1>
                 <p>This page contains all of the datasets collected from, and images used within,
                 the crowdsourcing projects on this platform. Everything on this page is made available
                 under <a href="https://creativecommons.org/publicdomain/zero/1.0/" target="_blank">CC0</a>, meaning that
@@ -32,7 +32,7 @@
             </div>
         </div>
     </section>
-</div>
+    
 <section class="white pattern-white-wall box-shadow-white-bottom">
     <div class="container container-padded">
         <div class="row padding-bottom">
