More minor style and layout updates

--- a/templates/data/index.html
+++ b/templates/data/index.html
@@ -21,11 +21,12 @@
 
     <a id="intro"></a>
     <section class="mid-grey pattern-brushed box-shadow-grey-bottom">
+        <p style="float:right;padding-right:10px;"><small>Photo: &copy; <a href="http://www.lensintheface.com" target="_href">Jon Ellis</a></small></p>
         <div class="container container-padded">
             {% include "_flash_messages.html" %}
             <div class="col-md-11">
-                <h1>Data</h1>
-                <p>This page contains all of the datasets collected from, and images used within,
+                <h1 class="inset-text-grey">Data</h1>
+                <p class="lead">This page contains all of the datasets collected from, and images used within,
                 the crowdsourcing projects on this platform. Everything on this page is made available
                 under <a href="https://creativecommons.org/publicdomain/zero/1.0/" target="_blank">CC0</a>, meaning that
                 it can be used without any copyright restrictions.</p>
