--- a/templates/account/index.html
+++ b/templates/account/index.html
@@ -30,8 +30,9 @@
       <div class="container container-padded>
         <div class="row vcenter-sm hcenter">
           <div class="col-md-8 col-xs-12 xs-center">
-            <h1>{{ _('Community') }} </h1><h4>{{total}} {{ _('registered users') }}</h4>
-            <small>Active volunteers are shown below</small>
+            <h1 class="inset-text-grey">{{ _('Community') }} </h1>
+            <p class="lead">{{total}} {{ _('registered users') }}</p>
+            <p>Active volunteers are shown below</p>
           </div>
           <div class="col-md-4 col-xs-12 padding-top-xs text-center">
             <a class="pull-right-sm btn btn-danger" href="{{url_for('leaderboard.index')}}">{{ _('View Leaderboard') }}</a>
@@ -63,6 +64,7 @@
         {% endif %}
       </div>
     </section>
+  {% endif %}
 
 <script>
 $("a[rel=popover]").popover({
