--- a/templates/home/_about.html
+++ b/templates/home/_about.html
@@ -18,14 +18,14 @@
         <p style="float:right;padding-right:10px;"><small>Photo: &copy; <a href="http://www.lensintheface.com" target="_href">Jon Ellis</a></small></p>
         <div class="container container-padded">
             <div class="col-md-11">
-                <h1>{{ _('About') }}</h1>
+                <h1 class="inset-text-grey">About</h1>
                 
-                <p>While the British Library is relatively young for a national library, its history stretches back until
+                <p class="lead">While the British Library is relatively young for a national library, its history stretches back until
                 long before computers were used for cataloguing as standard. The library's online database,
                 <a href="http://explore.bl.uk/" target="_blank">Explore</a>, provides public access to nearly 57 million records.
                 However, there are many important research items that can currently only be found by searching...</p>
                 
-                <p>Blah, blah, blah...this section will be updated soon with something more specific to the card catalogues :)</p>
+                <p class="lead">Blah, blah, blah...this section will be updated soon with something more specific to the card catalogues :)</p>
                     
                 <p>Each project contains a collection of tasks related to a specific area of research. These are tasks that can be
                 accurately processed by computers, they require human intelligence. Each individual task can usually be completed quickly,
@@ -43,7 +43,7 @@
     <section class="white pattern-white-wall box-shadow-white-bottom">
         <div class="container container-padded">
             <div class="col-md-11 padding-bottom-sm">
-                <h2 class="inset-text-grey">{{ _('Technology') }}</h2>
+                <h2>{{ _('Technology') }}</h2>
                 
                 <p>{{ brand }} is built on top of <a href="http://docs.pybossa.com/"> PyBossa </a>, an open-source Python framework for the creation of
                 crowd-sourcing projects. Individual applications are primarily written in HTML and Javascript.</p>
@@ -61,7 +61,7 @@
     <section class="white">
         <div class="container container-padded">
             <div class="col-md-11 padding-top-xs padding-bottom-sm">
-                <h2 id="contact">{{ _('Contact information') }}</h2>
+                <h2>{{ _('Contact information') }}</h2>
                 <ul>
                     <li>For more info, email: <a href="mailto:info@libcrowds.com">info@libcrowds.com</a></li>
                     <li>Report any bugs, issues or improvements,
