Further tidy up

--- a/templates/data/index.html
+++ b/templates/data/index.html
@@ -34,7 +34,7 @@
         </div>
     </section>
     
-<section class="white pattern-white-wall box-shadow-white-bottom">
+<section class="white pattern-white-wall box-shadow-white-bottom padding-top-sm">
     <div class="container container-padded">
         <div class="row padding-bottom">
             <div class="col-xs-12">
