Pages fade in when content is loaded

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -281,6 +281,7 @@ img.grey-border{border:1px solid #DDD}
 .jcrop-keymgr{display:none!important}
 .jcrop-holder{display:block;margin-right:auto;margin-left:auto}
 .loading-overlay{position:fixed;top:0;left:0;background:rgba(0,0,0,0.6);z-index:105;width:100%;height:100%;display:none}
+.cover-all{display:table;position:fixed;top:0;left:0;width:100%;height:100%;background:#fff;z-index:999999;}
 .loading-text{color:#fff;text-align:center;font-size:2em;height:100%}
 .pattern-brushed{background-image:url(../img/patterns/brushed.png)}
 .pattern-classy-fabric{background-image:url(../img/patterns/classy_fabric.png)}
