More splash image updates

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -248,7 +248,9 @@ h1 i,h2 i,h3 i{padding-right:10px}
 #home-splash{background-image:url(../img/Cards/splash1.jpg)}
 #community-splash{background-image:url(../img/Cards/splash2.jpg)}
 #data-splash{background-image:url(../img/Cards/splash3.jpg)}
-#about-splash{background-image:url(../img/Cards/splash4.jpg)}
+#project-splash{background-image:url(../img/Cards/splash4.jpg)}
+#about-splash{background-image:url(../img/Cards/splash6.jpg)}
+#stats-splash{background-image:url(../img/Cards/splash5.jpg)}
 .splash h1{font-size:2.0em;text-shadow:none;color:#fff;font-weight:200}
 .splash-overlay{-webkit-transition:background 1s;-moz-transition:background 1s;-ms-transition:background 1s;-o-transition:background 1s;transition:background 1s;width:100%;height:100%}
 
@@ -381,7 +383,7 @@ body{font-size:16px}
 .pull-right-sm{float:right}
 .vcenter-sm{display:-webkit-box;display:-webkit-flex;display:-moz-box;display:-ms-flexbox;display:flex;-webkit-flex-align:center;-ms-flex-align:center;-webkit-align-items:center}
 .pull-right-sm{float:right}
-.splash-overlay{background:rgba(0,0,0,.5)}
+.splash-overlay{background:rgba(0,0,0,.3)}
 .lead{font-size:1.1em;font-weight:200}
 }
 @media (min-width: 768px) and (max-width: 991px) {
