--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -4,7 +4,7 @@
 {% block content %}
 {% include "_flash_messages_floating.html" %}
 <div class="splash" id="home-splash">
-  <div class="splash-overlay vcenter hcenter">
+  <div class="splash-overlay vcenter hcenter" style="background:rgba(0,0,0,.5)">
     <div class="container text-center ie-vcenter padding-top">
       <h1>Crowd-sourcing from <br />the British Library</h1>
         <div class="col-sm-12">
