--- a/templates/applications/index.html
+++ b/templates/applications/index.html
@@ -14,7 +14,7 @@
 
 <span class="set-main-bg" data-bg="pattern-white-wall"></span>
     <section class="dark-grey pattern-classy-fabric">
-        <div class="container padding-top">
+        <div class="container padding-top-sm">
             <div class="col-xs-10 col-xs-offset-1">
                 <ul class="nav nav-pills">
                     {% for c in categories %}
