--- a/templates/stats/global.html
+++ b/templates/stats/global.html
@@ -4,7 +4,6 @@
 {% import "privacy/locked.html" as privacy %}
 
 {% block content %}
-    {% include "_flash_messages_floating.html" %}
 <span class="set-main-bg" data-bg="pattern-white-wall"></span>
 <!-- Leaflet maps -->
 <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.4/leaflet.css" />
@@ -16,12 +15,8 @@
 <link href="{{url_for('static', filename='css/stats/MarkerCluster.css')}}" rel="stylesheet" type="text/css">
 <link href="{{url_for('static', filename='css/stats/MarkerCluster.Default.css')}}" rel="stylesheet" type="text/css">
 <script src="{{url_for('static', filename='js/stats/leaflet.markercluster.js')}}" type="text/javascript"></script>
-<div class="splash" id="stats-splash">
-  <div class="splash-overlay vcenter hcenter">
-  </div>
-</div>
-
-<div class="container container-padded">
+<div class="container container-main">
+    {% include "_flash_messages.html" %}
     {% if enforce_privacy and (current_user.is_anonymous() or (current_user.is_authenticated and not current_user.admin)) %}
                 {{ privacy.render_lock_page() }}
             {% else %}
@@ -129,7 +124,7 @@
                     </div>
                 </div>
             </div>
-        {% endif %}
+            {% endif %}
 </div>
 <script src="{{url_for('static', filename='js/vendor/Chart.js-master/Chart.js')}}"></script>
 <script>
