--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -27,6 +27,7 @@ input[type="checkbox"]{-webkit-appearance:checkbox;height: auto;width:auto;margi
 input:focus,textarea:focus,textarea:focus,input[type="text"]:focus,input[type="password"]:focus,input[type="datetime"]:focus,input[type="datetime-local"]:focus,input[type="date"]:focus,input[type="month"]:focus,input[type="time"]:focus,input[type="week"]:focus,input[type="number"]:focus,input[type="email"]:focus,input[type="url"]:focus,input[type="search"]:focus,input[type="tel"]:focus,input[type="color"]:focus,.uneditable-input:focus{-webkit-box-shadow:inset 0 1px 1px rgba(0,0,0,0.075),0 0 8px rgba(139,191,54,0.6);-moz-box-shadow:inset 0 1px 1px rgba(0,0,0,0.075),0 0 8px rgba(139,191,54,0.6);box-shadow:inset 0 1px 1px rgba(0,0,0,0.075),0 0 8px rgba(139,191,54,0.6)}
 .inline-radio li{display:inline-block;padding-right:20px}
 textarea{resize:none}
+.notransition {-webkit-transition: none !important;-moz-transition: none !important;-o-transition: none !important;-ms-transition: none !important;transition: none !important;}
 .remove-padding{padding:0!important}
 .remove-padding-left{padding-left:0!important}
 .remove-padding-bottom{padding-bottom:0!important}
