--- a/templates/stats/global.html
+++ b/templates/stats/global.html
@@ -82,7 +82,19 @@
                     </div>
                 </div>
                 
+                <div class="row padding-bottom-sm">
+                    <div class="col-xs-12">
+                        <div class="white-rounded inset-shadow-white chart">
+                            <h4 class="text-center padding-bottom-sm">Number of Volunteers per Day</h4>
+                            <div id="users-daily-chart">
+                                <canvas id="users-daily" style="max-height:300px;"></canvas>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                
                 <div class="row">
+                    <!--
                     <div class="col-sm-4 col-xs-12 padding-bottom-sm">
                         <div class="white-rounded inset-shadow-white chart same-size">
                             <h4 class="text-center padding-bottom-sm">Proportion of Authenticated Users</h4>
@@ -93,9 +105,10 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-4 col-xs-12 padding-bottom-sm">
+                    -->
+                    <div class="col-sm-6 col-xs-12 padding-bottom-sm">
                         <div class="white-rounded inset-shadow-white chart same-size">
-                            <h4 class="text-center padding-bottom-sm">Total Daily Activity</h4>
+                            <h4 class="text-center padding-bottom-sm">Daily Activity</h4>
                             <div id="dow-chart">
                                 <canvas id="dow" width="500" height="500"></canvas>
                                 <div id="dow-legend" class="padding-top-sm legend">
@@ -103,24 +116,13 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-4 col-xs-12 padding-bottom-sm">
+                    <div class="col-sm-6 col-xs-12 padding-bottom-sm">
                         <div class="white-rounded inset-shadow-white chart same-size">
-                            <h4 class="text-center padding-bottom-sm">Status of Tasks</h4>
+                            <h4 class="text-center padding-bottom-sm">Total Progress</h4>
                             <div id="task-status-chart">
                                 <canvas id="task-status" width="500" height="500"></canvas>
                                 <div id="task-status-legend" class="padding-top-sm legend">
                                 </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                
-                <div class="row padding-bottom-sm">
-                    <div class="col-xs-12">
-                        <div class="white-rounded inset-shadow-white chart">
-                            <h4 class="text-center padding-bottom-sm">Active Volunteers per Day</h4>
-                            <div id="users-daily-chart">
-                                <canvas id="users-daily" style="max-height:300px;"></canvas>
                             </div>
                         </div>
                     </div>
@@ -178,8 +180,9 @@ $(function(){
         }
         map.addLayer(markers);
     
-    //User proportions chart
-        var userData = {{users|safe}};
+    var userData = {{users|safe}};
+    
+    /*User proportions chart
         var total = {{stats.n_total_users|safe}};
         var label1 = userData['values'][0]['label'] + " : " + Math.round(userData['values'][0]['value'][1]/total*100) + "% (" + userData['values'][0]['value'][1] + " user";
         if (userData['values'][0]['value'][1] != 1) {
@@ -212,12 +215,13 @@ $(function(){
         canvas.parentNode.parentNode.appendChild(legendHolder.firstChild);
         usersChart.generateLegend();
         document.getElementById('users-legend').innerHTML = usersChart.generateLegend();
-        
+        */
+    
         //Task status
         var completed = {{stats.n_tasks_completed|safe}};
         var ongoing = {{stats.n_tasks_ongoing|safe}};
         var total = ongoing + completed;
-        var label1 = "Ongoing : " + Math.round(ongoing/total*100) + "% (" + ongoing + " task";
+        var label1 = "Remaining : " + Math.round(ongoing/total*100) + "% (" + ongoing + " task";
         if (userData['values'][1]['value'][1] != 1) {
             label1 += "s"
         }
@@ -246,8 +250,6 @@ $(function(){
         var taskStatusChart = new Chart(ctx).Doughnut(data);
         var legendHolder = document.getElementById('task-status-legend')
         canvas.parentNode.parentNode.appendChild(legendHolder.firstChild);
-        taskStatusChart.generateLegend();
-        document.getElementById('task-status-legend').innerHTML = taskStatusChart.generateLegend();
           
         //Tasks completed per day
         $answers = {{task_runs_daily|safe}}['days'];
@@ -423,27 +425,15 @@ $(function(){
                     pointHighlightFill: "#fff",
                     pointHighlightStroke: "rgba(151,187,205,1)",
                     data: authData
-                },
-                {
-                    label: "Anonymous (" + anonSum + " total answers)",
-                    fillColor: "rgba(150,150,150,0.2)",
-                    strokeColor: "rgba(150,150,150,1)",
-                    pointColor: "rgba(150,150,150,1)",
-                    pointStrokeColor: "#fff",
-                    pointHighlightFill: "#fff",
-                    pointHighlightStroke: "rgba(150,150,150,1)",
-                    data: anonData
                 }
             ]
         };
         var canvas = document.getElementById("dow");
         var ctx = $("#dow")[0].getContext("2d");
-        var opts = {populateSparseData:true, multiTooltipTemplate: " <%=value%> answer<%if(value != 1)\u007B%>s<%}%>"};
+        var opts = {populateSparseData:true, tooltipTemplate: "<%if(label)\u007B%><%=label%> : <%}%><%=value%> <%if(value != 1)\u007B%>answers<%}else\u007B%>answer<%}%>"};
         var dowChart = new Chart(ctx).Radar(data, opts);
         var dowLegendHolder = document.getElementById('dow-legend')
         canvas.parentNode.parentNode.appendChild(dowLegendHolder.firstChild);
-        dowChart.generateLegend();
-        document.getElementById('dow-legend').innerHTML = dowChart.generateLegend();
         dowChart.draw();
         
         //Top 5 projects this week
