Footer design updates

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -43,6 +43,7 @@ textarea{resize:none}
 .padding-bottom{padding-bottom:50px}
 .padding-bottom-sm{padding-bottom:30px}
 .padding-left-xs{padding-left:10px}
+.padding-sides-xs{padding-left:5px;padding-right:5px;}
 .margin-bottom{margin-bottom:50px}
 .form-control{padding:12px 15px;height:47px;}
 .form-horizontal .form-group{margin-right:0;margin-left:0}
@@ -159,7 +160,7 @@ ul.users li a{display:block;margin-bottom:5px;margin-right:10px;margin-left:10px
 .nav-stacked li > a{color:#888;padding:2px 18px}
 .footer-links{display:inline}
 .sticky-footer-col{padding-top:10px}
-#sticky-footer{height:120px;margin-top:20px;padding-top:10px;padding-bottom:10px;width:100%;position:absolute;bottom:0;background-color:#FAFAFA;font-family:sans-serif;font-size:12px;z-index:100}
+#sticky-footer{margin-top:20px;width:100%;position:absolute;bottom:0;background-color:#F7F7F7;font-family:sans-serif;font-size:12px;z-index:100}
 #sticky-footer ul{color:#777;list-style:none;padding:0;margin:0;width:100%;text-align:center}
 #main-body-content{padding-bottom:120px;min-height:800px}
 #sticky-footer li{text-align:center;display:inline-block}
@@ -348,6 +349,8 @@ img#navbar-logo {height: 90%;}
 .pagination li {display: inline;padding-left: 5px;padding-right: 5px;}
 .modal-dialog {margin: 100px auto;}
 @media (max-width: 767px) {
+#sticky-footer{height:60px}
+.footer-links{padding-top:15px}
 .navbar .container{width:auto!important}
 .navbar-default .navbar-nav>.active>a,.navbar-default .navbar-nav>.active>a:focus,.navbar-default .navbar-nav>.active>a:hover{background-color:#D00000;background-color:rgba(0,0,0,0,)}
 .navbar.opaque .nav > li.active > a{color:#fff}
@@ -372,6 +375,7 @@ body > footer .container{padding-left:20px;padding-right:20px}
 .text-center-xs{text-align:center}
 }
 @media (min-width: 768px) {
+#sticky-footer{height:100px}
 .cover-all{display:table;position:fixed;top:0;left:0;width:100%;height:100%;background:#fff;z-index:999999;}
 .form-horizontal .control-label{padding-top:13px}
 .flickr-thumbnails h4, .flickr-thumbnails .h4{text-overflow:ellipsis;}
