--- a/templates/_footer.html
+++ b/templates/_footer.html
@@ -4,12 +4,6 @@
             <a href="http://bl.uk/" class="hidden-xs ie-vcenter">
                 <img class="img-responsive center-block" src="{{url_for('static', filename='img/bl-logo.png')}}">
             </a>
-            <div class="col-xs-6 hidden-sm hidden-md hidden-lg">
-                <img class="img-responsive center-block" src="{{url_for('static', filename='img/bl-logo.png')}}">
-            </div>
-            <div class="col-xs-6 hidden-sm hidden-md hidden-lg">
-                <img class="img-responsive center-block" src="{{url_for('static', filename='img/pybossa.png')}}">
-            </div>
         </div>
         
         <div class="col-sm-6 vcenter hcenter sticky-footer-col">
@@ -19,16 +13,13 @@
                 <div id="footer_links">
                     <ul>
                         <li>
-                            <i class="fa fa-envelope"></i>
-                            <a href="mailto:{{contact_email}}">{{ _('Email') }}</a>
+                            <a href="mailto:{{contact_email}}"><i class="fa fa-envelope padding-sides-xs"></i></a>
                         </li>
                         <li>
-                            <i class="fa fa-twitter"></i>
-                            <a href="http://twitter.com/{{contact_twitter}}">{{ _('Twitter') }}</a>
+                            <a href="http://twitter.com/{{contact_twitter}}"><i class="fa fa-twitter padding-sides-xs"></i></a>
                         </li>
                         <li>
-                            <i class="fa fa-info-circle"></i>
-                            <a href="/about">About</a>
+                            <a href="/about"><i class="fa fa-info-circle padding-sides-xs"></i></a>
                         </li>
                     </ul>
                 </div>
