Link corrected and opens in a new tab

--- a/templates/_footer.html
+++ b/templates/_footer.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="row center">
         <div class="col-sm-3 col-xs-12 vcenter hcenter sticky-footer-col">
-            <a href="http://http://labs.bl.uk/" class="hidden-xs ie-vcenter">
+            <a href="http://labs.bl.uk/" target="_blank" class="hidden-xs ie-vcenter">
                 <img class="img-responsive center-block" src="{{url_for('static', filename='img/bl-logo.png')}}">
             </a>
         </div>
@@ -28,7 +28,7 @@
         </div>
         
         <div class="col-sm-3 vcenter hcenter sticky-footer-col hidden-xs">
-            <a href="http://pybossa.com/" class="ie-vcenter">
+            <a href="http://pybossa.com/"  target="_blank" class="ie-vcenter">
                 <img class="img-responsive center-block" src="{{url_for('static', filename='img/pybossa.png')}}">
             </a>
         </div>
