--- a/templates/_footer.html
+++ b/templates/_footer.html
@@ -16,7 +16,7 @@
                             <a href="mailto:{{contact_email}}"><i class="fa fa-envelope padding-sides-xs"></i></a>
                         </li>
                         <li>
-                            <a href="http://twitter.com/{{contact_twitter}}"><i class="fa fa-twitter padding-sides-xs"></i></a>
+                            <a href="http://twitter.com/{{contact_twitter}}" target="_blank><i class="fa fa-twitter padding-sides-xs"></i></a>
                         </li>
                         <li>
                             <a href="/about"><i class="fa fa-info-circle padding-sides-xs"></i></a>
